--- a/index.html
+++ b/index.html
@@ -19,43 +19,28 @@
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;meta name="viewport" content="width=device-width,initial-scale=1" /&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;Contact&lt;/title&gt;</p>
 <p class="p2"><br></p>
-<p class="p1"><span class="Apple-converted-space">  </span>&lt;!-- reduce indexing --&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;meta name="robots" content="noindex,nofollow,noarchive,nosnippet,noimageindex" /&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;meta name="referrer" content="no-referrer" /&gt;</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;style&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>body{</p>
-<p class="p1"><span class="Apple-converted-space">      </span>margin:0;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>background:#fff;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>color:#111;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>}</p>
-<p class="p1"><span class="Apple-converted-space">    </span>.wrap{</p>
-<p class="p1"><span class="Apple-converted-space">      </span>max-width:560px;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>margin:0 auto;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>padding:40px 18px;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>}</p>
-<p class="p1"><span class="Apple-converted-space">    </span>a.contact-btn{</p>
-<p class="p1"><span class="Apple-converted-space">      </span>display:block;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>width:100%;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>background:#000;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>color:#fff;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>text-decoration:none;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>text-align:center;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:#fff}</p>
+<p class="p1"><span class="Apple-converted-space">    </span>.wrap{max-width:560px;margin:0 auto;padding:40px 18px}</p>
+<p class="p1"><span class="Apple-converted-space">    </span>a.btn{</p>
+<p class="p1"><span class="Apple-converted-space">      </span>display:block;width:100%;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>background:#000;color:#fff;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>text-decoration:none;text-align:center;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>padding:18px 16px;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>font-size:18px;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>font-weight:700;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>border-radius:8px; /* rectangular with slight rounding */</p>
+<p class="p1"><span class="Apple-converted-space">      </span>font-size:18px;font-weight:700;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>border-radius:8px;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>box-sizing:border-box;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>}</p>
-<p class="p1"><span class="Apple-converted-space">    </span>a.contact-btn:active{ transform: translateY(1px); }</p>
+<p class="p1"><span class="Apple-converted-space">    </span>a.btn:active{transform:translateY(1px)}</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/style&gt;</p>
 <p class="p1">&lt;/head&gt;</p>
-<p class="p2"><br></p>
 <p class="p1">&lt;body&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;main class="wrap"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;!-- IMPORTANT: this file name must match your repo exactly --&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;a class="contact-btn" href="./Shawn-OBrien-Stingray.vcf"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;a class="btn"</p>
+<p class="p1"><span class="Apple-converted-space">       </span>href="https://vwhcd8wj6p-svg.github.io/contact/Shawn-OBrien-Stingray.vcf"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>Shawn O'Brien Contact</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/a&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/main&gt;</p>
